--- a/Web/NbuReservationSystem.Web/Views/Reservations/_DayTab.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/_DayTab.cshtml
@@ -1,6 +1,6 @@
 ﻿@using NbuReservationSystem.Web.Extensions
 @model NbuReservationSystem.Web.ViewModels.Reservations.DayViewModel
-<div id="info-tab">
+<div>
     <div class="row">
         <div class="col-md-28">
             <div class="panel panel-day weekdays">
