By the default the callendar will take 100% of the screen. Added a close button to the info tab.
When the use clicks on a date, the calledanr will be resized -
to make space for the info tab. Once the close button (small 'x')
is pressed, the day tab will be deleted. The calendar will restore
it's original size.

Adjusted the border of the info tab container.

--- a/Web/NbuReservationSystem.Web/Content/Site.css
+++ b/Web/NbuReservationSystem.Web/Content/Site.css
@@ -133,3 +133,12 @@ header.carousel .fill {
 .green-ok {
     color: greenyellow;
 }
+
+#day-tab-title-container {
+    /*dont ask where 7.4 comes from*/
+    padding: 7.4px 15px;
+}
+
+#close-tab {
+    text-decoration: none;
+}
