--- a/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
@@ -32,7 +32,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-21">
+        <div class="col-md-28" id="calendar-container">
             @Html.Partial("_CalendarHeader")
             @foreach (var week in Model.Weeks)
             {
@@ -100,11 +100,25 @@
     @section scripts {
         <script type="text/javascript">
             function OnAjaxRequestSuccess() {
+                // calculate the browser's width
                 var browserWidth = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
                 var bootstrapSmallGrid = 768;
+
+                // and scroll down only if we're in mobile mode
                 if (browserWidth <= bootstrapSmallGrid) {
                     $("html, body").animate({ scrollTop: $(document).height() }, 1000);
                 }
+
+
+                // resize the calendar
+                var container = $('#calendar-container').removeClass('col-md-28').addClass('col-md-21');
+
+                $('#close-tab').click(function () {
+                    // clear the tab..
+                    $('#info-tab').empty();
+                    // ..and return the previous dimensions
+                    container.removeClass('col-md-21').addClass('col-md-28');
+                });
             }
 
             function OnAjaxRequestFailure(request, error) {
