--- a/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
@@ -34,61 +34,7 @@
     <div class="row">
         <div class="col-md-28" id="calendar-container">
             @Html.Partial("_CalendarHeader")
-            @foreach (var week in Model.Weeks)
-            {
-                <div class="row">
-                    <div class="col-md-28">
-                        <div class="row">
-                            @foreach (var day in week.Days)
-                            {
-                                <div class="col-md-4">
-                                    <div class="panel panel-default panel-day">
-                                        <div class="panel-body">
-                                            <p class="text-right day">
-                                                @Ajax.ActionLink(day.Day.Day.ToString(), "DayTab", "Reservations",
-                                                    new { id = day.Day.DayTabUrl() },
-                                                    new AjaxOptions
-                                                    {
-                                                        InsertionMode = InsertionMode.Replace,
-                                                        UpdateTargetId = "info-tab",
-                                                        OnSuccess = "OnAjaxRequestSuccess",
-                                                        OnFailure = "OnAjaxRequestFailure"
-                                                    })
-                                            </p>
-                                        </div>
-                                    </div>
-
-                                    @for (int i = 0; i < 5; i++)
-                                    {
-                                        if (day.Reservations.Count <= i)
-                                        {
-                                            break;
-                                        }
-
-                                        <div class="panel panel-default simple-border">
-                                            <div class="panel-body">
-                                                <p class="reservation-title-container">
-                                                    <span>@Html.FormatEventStart(day.Reservations[i].BeginsOn)</span>
-                                                    <span class="reservation-title">@day.Reservations[i].Title</span>
-                                                </p>
-                                            </div>
-                                        </div>
-                                    }
-                                    @*TODO: this is a really ugly fix! Fix it!!!*@
-                                    @for (int i = day.Reservations.Count; i < 5; i++)
-                                    {
-                                        <div class="panel panel-default simple-border">
-                                            <div class="panel-body">
-                                                <p>&nbsp;</p>
-                                            </div>
-                                        </div>
-                                    }
-                                </div>
-                            }
-                        </div>
-                    </div>
-                </div>
-            }
+            @Html.Partial("_WeeksInMonth", Model.Weeks)
         </div>
 
         <div class="col-md-7">
@@ -97,34 +43,35 @@
         </div>
     </div>
 
-    @section scripts {
-        <script type="text/javascript">
-            function OnAjaxRequestSuccess() {
-                // calculate the browser's width
-                var browserWidth = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
-                var bootstrapSmallGrid = 768;
-
-                // and scroll down only if we're in mobile mode
-                if (browserWidth <= bootstrapSmallGrid) {
-                    $("html, body").animate({ scrollTop: $(document).height() }, 1000);
-                }
-
-
-                // resize the calendar
-                var container = $('#calendar-container').removeClass('col-md-28').addClass('col-md-21');
-
-                $('#close-tab').click(function () {
-                    // clear the tab..
-                    $('#info-tab').empty();
-                    // ..and return the previous dimensions
-                    container.removeClass('col-md-21').addClass('col-md-28');
-                });
-            }
-
-            function OnAjaxRequestFailure(request, error) {
-                // TODO: notify the user!
-                console.log("DayTab request failed:" + error);
-            }
-        </script>
-    }
 </div>
+
+@section scripts {
+    <script type="text/javascript">
+        function OnAjaxRequestSuccess() {
+            // calculate the browser's width
+            var browserWidth = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
+            var bootstrapSmallGrid = 768;
+
+            // and scroll down only if we're in mobile mode
+            if (browserWidth <= bootstrapSmallGrid) {
+                $("html, body").animate({ scrollTop: $(document).height() }, 1000);
+            }
+
+
+            // resize the calendar
+            var container = $('#calendar-container').removeClass('col-md-28').addClass('col-md-21');
+
+            $('#close-tab').click(function () {
+                // clear the tab..
+                $('#info-tab').empty();
+                // ..and return the previous dimensions
+                container.removeClass('col-md-21').addClass('col-md-28');
+            });
+        }
+
+        function OnAjaxRequestFailure(request, error) {
+            // TODO: notify the user!
+            console.log("DayTab request failed:" + error);
+        }
+    </script>
+}
