--- a/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
@@ -8,28 +8,8 @@
 }
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-28">
-            <h1>
-                <a href="@Url.Action("ByMonth", "Reservations", Html.CreatePreviousMonthRoutValues(Model))" class="btn btn-default">
-                    &nbsp;
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                </a>
-                <a href="@Url.Action("ByMonth", "Reservations", Html.CreateNextMonthRoutValues(Model))" class="btn btn-default">
-                    &nbsp;
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                </a>
-                @Html.FormatLocalizedMonth(Model)
-            </h1>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-28">
-            @*TODO: halls dropdown!*@
-            <h2>Зала в библитеката</h2>
-        </div>
-    </div>
+    @Html.Partial("_CalendarControls", Model)
 
     <div class="row">
         <div class="col-md-28" id="calendar-container">
@@ -44,34 +24,3 @@
     </div>
 
 </div>
-
-@section scripts {
-    <script type="text/javascript">
-        function OnAjaxRequestSuccess() {
-            // calculate the browser's width
-            var browserWidth = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
-            var bootstrapSmallGrid = 768;
-
-            // and scroll down only if we're in mobile mode
-            if (browserWidth <= bootstrapSmallGrid) {
-                $("html, body").animate({ scrollTop: $(document).height() }, 1000);
-            }
-
-
-            // resize the calendar
-            var container = $('#calendar-container').removeClass('col-md-28').addClass('col-md-21');
-
-            $('#close-tab').click(function () {
-                // clear the tab..
-                $('#info-tab').empty();
-                // ..and return the previous dimensions
-                container.removeClass('col-md-21').addClass('col-md-28');
-            });
-        }
-
-        function OnAjaxRequestFailure(request, error) {
-            // TODO: notify the user!
-            console.log("DayTab request failed:" + error);
-        }
-    </script>
-}
