Deleted old/unused /Reservations/_Layout.cshtml

--- a/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
@@ -1,9 +1,7 @@
-﻿@using NbuReservationSystem.Web.Extensions
-@model NbuReservationSystem.Web.ViewModels.Reservations.MonthlyReservationsViewModel
+﻿@model NbuReservationSystem.Web.ViewModels.Reservations.MonthlyReservationsViewModel
 
 @{
     ViewBag.Title = "Reservations";
-    //Layout = "_Layout.cshtml";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -22,5 +20,4 @@
             </div>
         </div>
     </div>
-
 </div>
