--- a/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
@@ -5,19 +5,4 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container-fluid">
-
-    @Html.Partial("_CalendarControls", Model)
-
-    <div class="row">
-        <div class="col-md-28" id="calendar-container">
-            @Html.Partial("_CalendarHeader")
-            @Html.Partial("_WeeksInMonth", Model.Weeks)
-        </div>
-
-        <div class="col-md-7">
-            <div id="info-tab">
-            </div>
-        </div>
-    </div>
-</div>
+@Html.Partial("_Calendar", Model)
