--- a/Web/NbuReservationSystem.Web/Views/Reservations/_CalendarControls.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/_CalendarControls.cshtml
@@ -4,14 +4,27 @@
 <div class="row">
     <div class="col-md-28">
         <h1>
-            <a href="@Url.Action("ByMonth", "Reservations", Html.CreatePreviousMonthRoutValues(Model))" class="btn btn-default">
+            <a data-ajax="true"
+               data-ajax-method="GET"
+               data-ajax-mode="replace"
+               data-ajax-update="#calendar-wrapper"
+               href="@Url.Action("ByMonth", "Reservations", Html.CreatePreviousMonthRoutValues(Model))"
+               class="no-link-underline"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a>
+            @*<a href="@Url.Action("ByMonth", "Reservations", Html.CreatePreviousMonthRoutValues(Model))" class="btn btn-default">
                 &nbsp;
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            </a>
-            <a href="@Url.Action("ByMonth", "Reservations", Html.CreateNextMonthRoutValues(Model))" class="btn btn-default">
+            </a>*@
+            @*<a href="@Url.Action("ByMonth", "Reservations", Html.CreateNextMonthRoutValues(Model))" class="btn btn-default">
                 &nbsp;
                 <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            </a>
+            </a>*@
+            <a data-ajax="true"
+               data-ajax-method="GET"
+               data-ajax-mode="replace"
+               data-ajax-update="#calendar-wrapper"
+               href="@Url.Action("ByMonth", "Reservations", Html.CreateNextMonthRoutValues(Model))"
+               class="no-link-underline"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
+
             @Html.FormatLocalizedMonth(Model)
         </h1>
     </div>
