--- a/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
@@ -6,3 +6,34 @@
 }
 
 @Html.Partial("_Calendar", Model)
+
+@section scripts {
+    <script type="text/javascript">
+        function OnAjaxRequestSuccess() {
+            // calculate the browser's width
+            var browserWidth = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
+            var bootstrapSmallGrid = 768;
+
+            // and scroll down only if we're in mobile mode
+            if (browserWidth <= bootstrapSmallGrid) {
+                $("html, body").animate({ scrollTop: $(document).height() }, 1000);
+            }
+
+
+            // resize the calendar
+            var container = $('#calendar-container').removeClass('col-md-28').addClass('col-md-21');
+
+            $('#close-tab').click(function () {
+                // clear the tab..
+                $('#info-tab').empty();
+                // ..and return the previous dimensions
+                container.removeClass('col-md-21').addClass('col-md-28');
+            });
+        }
+
+        function OnAjaxRequestFailure(request, error) {
+            // TODO: notify the user!
+            console.log("DayTab request failed:" + error);
+        }
+    </script>
+}
