Refactored the Web models

--- a/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/Monthly.cshtml
@@ -1,4 +1,4 @@
-﻿@model NbuReservationSystem.Web.ViewModels.Reservations.MonthlyReservationsViewModel
+﻿@model NbuReservationSystem.Web.Models.Responses.Reservations.MonthlyReservationsViewModel
 
 @{
     ViewBag.Title = "Reservations";
