--- a/Web/NbuReservationSystem.Web/Views/Reservations/_CalendarControls.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/_CalendarControls.cshtml
@@ -1,5 +1,5 @@
 ﻿@using NbuReservationSystem.Web.Extensions
-@model NbuReservationSystem.Web.ViewModels.Reservations.MonthlyReservationsViewModel
+@model NbuReservationSystem.Web.Models.Responses.Reservations.MonthlyReservationsViewModel
 
 <div class="row">
     <div class="col-md-28">
