--- a/Web/NbuReservationSystem.Web/Views/Reservations/_DayTab.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/_DayTab.cshtml
@@ -1,5 +1,5 @@
 ﻿@using NbuReservationSystem.Web.Extensions
-@model NbuReservationSystem.Web.ViewModels.Reservations.DayViewModel
+@model NbuReservationSystem.Web.Models.Responses.Reservations.DayViewModel
 <div>
     <div class="row">
         <div class="col-md-28">
