--- a/Web/NbuReservationSystem.Web/Views/Reservations/_WeeksInMonth.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/_WeeksInMonth.cshtml
@@ -1,5 +1,5 @@
 ﻿@using NbuReservationSystem.Web.Extensions
-@model  IList<NbuReservationSystem.Web.ViewModels.Reservations.WeekViewModel>
+@model  IList<NbuReservationSystem.Web.Models.Util.WeekViewModel>
 
 @foreach (var week in Model)
 {
