--- a/Web/NbuReservationSystem.Web/Views/Reservations/_Calendar.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/_Calendar.cshtml
@@ -1,4 +1,4 @@
-﻿@model NbuReservationSystem.Web.ViewModels.Reservations.MonthlyReservationsViewModel
+﻿@model NbuReservationSystem.Web.Models.Responses.Reservations.MonthlyReservationsViewModel
 
 <div id="calendar-wrapper">
     <div class="container-fluid">
