Added basic 'new reservation view' view Added bootstrap glyphicons Added moment.js + date time picker Renamed "Util" to "Enums"

--- a/Web/NbuReservationSystem.Web/Content/Site.css
+++ b/Web/NbuReservationSystem.Web/Content/Site.css
@@ -1,8 +1,4 @@
-﻿.col-md-4 {
-    padding: 0px;
-}
-
-.panel,
+﻿.panel,
 .panel-heading {
     -ms-border-radius: 0;
     border-radius: 0;
@@ -26,11 +22,10 @@
     background-color: #F8F8F8;
 }
 
-.day {
+.day-number {
     margin: 0;
     font-size: 20px;
     color: grey;
-    /*border-right: 1px solid white;*/
     border-right: 0;
 }
 
@@ -108,7 +103,9 @@ header.carousel .carousel-inner {
 header.carousel .fill {
     width: 100%;
     height: 100%;
+    -ms-background-position: center;
     background-position: center;
+    -ms-background-size: cover;
     background-size: cover;
 }
 
@@ -141,4 +138,28 @@ header.carousel .fill {
 
 #close-tab {
     text-decoration: none;
+}
+
+.bootstrap-datetimepicker-widget {
+    font-size: 12px;
+}
+
+.day {
+    font-size: 14px;
+}
+
+#new-reservation-form {
+    padding: 15px;
+}
+
+#new-reservation-form .row {
+    margin: 20px 0;
+}
+
+#new-reservation-form textarea {
+    resize: vertical;
+}
+
+.day-container {
+    padding: 0;
 }
