--- a/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
+@*TODO: this page also needs localization!*@
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -14,6 +15,7 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
+        @*TODO: download these images!*@
         <div class="item active">
             <img src="http://www.nbu.bg/files/za-nbu/slidove-purva/dsc-0056.png" alt="Chania">
         </div>
