--- a/Web/NbuReservationSystem.Web/Views/Reservations/_CalendarHeader.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/_CalendarHeader.cshtml
@@ -2,49 +2,49 @@
 
 @*TODO: Find a way to implement an iterator for the days!*@
 <div class="row">
-    <div class="col-md-4 hidden-xs">
+    <div class="col-md-4 hidden-xs day-container">
         <div class="panel panel-day weekdays">
             <div class="panel-heading">
                 <h3 class="panel-title text-center">@Weekdays.Monday</h3>
             </div>
         </div>
     </div>
-    <div class="col-md-4 hidden-xs">
+    <div class="col-md-4 hidden-xs day-container">
         <div class="panel panel-day weekdays">
             <div class="panel-heading">
                 <h3 class="panel-title text-center">@Weekdays.Tuesday</h3>
             </div>
         </div>
     </div>
-    <div class="col-md-4 hidden-xs">
+    <div class="col-md-4 hidden-xs day-container">
         <div class="panel panel-day weekdays">
             <div class="panel-heading">
                 <h3 class="panel-title text-center">@Weekdays.Wednesday</h3>
             </div>
         </div>
     </div>
-    <div class="col-md-4 hidden-xs">
+    <div class="col-md-4 hidden-xs day-container">
         <div class="panel panel-day weekdays">
             <div class="panel-heading">
                 <h3 class="panel-title text-center">@Weekdays.Thursday</h3>
             </div>
         </div>
     </div>
-    <div class="col-md-4 hidden-xs">
+    <div class="col-md-4 hidden-xs day-container">
         <div class="panel panel-day weekdays">
             <div class="panel-heading">
                 <h3 class="panel-title text-center">@Weekdays.Friday</h3>
             </div>
         </div>
     </div>
-    <div class="col-md-4 hidden-xs">
+    <div class="col-md-4 hidden-xs day-container">
         <div class="panel panel-day weekdays">
             <div class="panel-heading">
                 <h3 class="panel-title text-center">@Weekdays.Saturday</h3>
             </div>
         </div>
     </div>
-    <div class="col-md-4 hidden-xs">
+    <div class="col-md-4 hidden-xs day-container">
         <div class="panel panel-day weekdays">
             <div class="panel-heading">
                 <h3 class="panel-title text-center">@Weekdays.Sunday</h3>
