--- a/Web/NbuReservationSystem.Web/Views/Shared/_Layout.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - NbuReservationSystem</title>
+    @*TODO: fix this...!!*@
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
     @Styles.Render("~/Content/css")
 </head>
 <body>
@@ -50,6 +52,9 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/bootstrap-dp")
+    @*TODO: fix this...!!*@
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/js/bootstrap-datetimepicker.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
